--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ html, body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center
+    align-items: center;
 }
 .rates-1month {
     flex: 1;
